Issue #2 Crud de departamentos

--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -6,7 +6,90 @@
 
     <ui:define name="content">
     	
-    	
+
+			<div class="column_12 search-bar margin-bottom">
+				<form>
+					<input type="text" placeholder="Que produto você procura?"/>
+					<span class="icon search"></span>
+				</form>
+			</div>
+			<div class="column_4 product">
+				<figure>
+					<img src="http://www.stuartslondon.com/images/brutus-shirt-trimfit-red-heritage-tartan-shirt-p1871-10354_zoom.jpg" />
+				</figure>
+				<p>
+					Camiseta Xadrez<br/>
+					<strong class="price"> R$ 150,00</strong>
+				</p>
+				<a href="#" class="button secondary tiny">
+					+ Detalhes
+				</a>
+			</div>
+			<div class="column_4 product">
+				<figure>
+					<img src="http://www.stuartslondon.com/images/brutus-shirt-trimfit-red-heritage-tartan-shirt-p1871-10354_zoom.jpg" />
+				</figure>
+				<p>
+					Camiseta Xadrez<br/>
+					<strong class="price"> R$ 150,00</strong>
+				</p>
+				<a href="#" class="button secondary tiny">
+					+ Detalhes
+				</a>
+			</div>
+			<div class="column_4 product">
+				<figure>
+					<img src="http://www.stuartslondon.com/images/brutus-shirt-trimfit-red-heritage-tartan-shirt-p1871-10354_zoom.jpg" />
+				</figure>
+				<p>
+					Camiseta Xadrez<br/>
+					<strong class="price"> R$ 150,00</strong>
+				</p>
+				<a href="#" class="button secondary tiny">
+					+ Detalhes
+				</a>
+			</div>
+			<div class="column_4 product">
+				<figure>
+					<img src="http://www.stuartslondon.com/images/brutus-shirt-trimfit-red-heritage-tartan-shirt-p1871-10354_zoom.jpg" />
+				</figure>
+				<p>
+					Camiseta Xadrez<br/>
+					<strong class="price"> R$ 150,00</strong>
+				</p>
+				<a href="#" class="button secondary tiny">
+					+ Detalhes
+				</a>
+			</div>
+			<div class="column_4 product">
+				<figure>
+					<img src="http://www.stuartslondon.com/images/brutus-shirt-trimfit-red-heritage-tartan-shirt-p1871-10354_zoom.jpg" />
+				</figure>
+				<p>
+					Camiseta Xadrez<br/>
+					<strong class="price"> R$ 150,00</strong>
+				</p>
+				<a href="#" class="button secondary tiny">
+					+ Detalhes
+				</a>
+			</div>
+			<div class="column_4 product">
+				<figure>
+					<img src="http://www.stuartslondon.com/images/brutus-shirt-trimfit-red-heritage-tartan-shirt-p1871-10354_zoom.jpg" />
+				</figure>
+				<p>
+					Camiseta Xadrez<br/>
+					<strong class="price"> R$ 150,00</strong>
+				</p>
+				<a href="#" class="button secondary tiny">
+					+ Detalhes
+				</a>
+			</div>
+			
+			<ul class="pagination">
+				<li class="prev"><a href="" class="button alert"><span class="icon chevron-left"></span> Anterior</a></li>
+				<li class="next"><a href="" class="button alert">Próxima <span class="icon chevron-right"></span></a></li>
+			</ul>
     </ui:define>
 
 </ui:decorate>
