--- a/WebContent/resources/shoppingUcs/boolField.xhtml
+++ b/WebContent/resources/shoppingUcs/boolField.xhtml
@@ -7,18 +7,12 @@
 	<c:interface>
 		<c:attribute name="label" />
 		<c:attribute name="fieldId" />
-		<c:attribute name="required" />
 	</c:interface>
 	
 	<c:implementation>
 		<sh:fieldWrapper label="#{cc.attrs.label}" fieldId="#{cc.attrs.fieldId}">
-			<h:inputText required="#{cc.attrs.required}"
-						 value="#{cc.attrs.value}"
-						 id="#{cc.attrs.fieldId}"
-						 styleClass="date"
-						 requiredMessage="não pode ficar em branco">
-				<cr:convertDateTime pattern="dd/MM/yyyy" />
-			</h:inputText>
+			<h:selectBooleanCheckbox value="#{cc.attrs.value}"
+									 id="#{cc.attrs.id}" /><br/><br/>
 		</sh:fieldWrapper>
 	</c:implementation>
 </html>
