--- a/WebContent/admin/employees/index.xhtml
+++ b/WebContent/admin/employees/index.xhtml
@@ -4,9 +4,9 @@
 											xmlns:h="http://java.sun.com/jsf/html"
 											xmlns:sh="http://java.sun.com/jsf/composite/shoppingUcs">
 
-	<ui:define name="admin_page_title">Departamentos</ui:define>
+	<ui:define name="admin_page_title">Funcionários</ui:define>
     <ui:define name="admin_content">
-    	<sh:collectionTable bean="#{departmentBean}">
+    	<sh:collectionTable bean="#{employeeBean}">
     		<h:column>
     			<c:facet name="header">ID</c:facet>
     			#{row.id}
@@ -16,7 +16,16 @@
     			#{row.name}
     		</h:column>	
     		<h:column>
-    			<sh:tableActions bean="#{departmentBean}" entity="#{row}" />
+    			<c:facet name="header">Usuário</c:facet>
+    			#{row.username}
+    		</h:column>
+    		<h:column>
+    			<c:facet name="header">Admin?</c:facet>
+    			<h:outputText value="Sim" rendered="#{row.isMaster()}" />
+    			<h:outputText value="Não" rendered="#{not row.isMaster()}" />
+    		</h:column>	
+    		<h:column>
+    			<sh:tableActions bean="#{employeeBean}" entity="#{row}" />
     		</h:column>
  		</sh:collectionTable>
     </ui:define>
