--- a/WebContent/resources/shoppingUcs/currencyField.xhtml
+++ b/WebContent/resources/shoppingUcs/currencyField.xhtml
@@ -15,9 +15,11 @@
 			<h:inputText required="#{cc.attrs.required}"
 						 value="#{cc.attrs.value}"
 						 id="#{cc.attrs.fieldId}"
-						 styleClass="date"
-						 requiredMessage="não pode ficar em branco">
-				<cr:convertDateTime pattern="dd/MM/yyyy" />
+						 requiredMessage="não pode ficar em branco"
+						 converterMessage="não é um valor válido"
+						 styleClass="currency">
+				<cr:convertNumber type="currency" maxFractionDigits="2" currencySymbol="R$" />
+				<c:insertChildren />
 			</h:inputText>
 		</sh:fieldWrapper>
 	</c:implementation>
