--- a/WebContent/admin/departments/index.xhtml
+++ b/WebContent/admin/departments/index.xhtml
@@ -20,4 +20,8 @@
     		</h:column>
  		</sh:collectionTable>
     </ui:define>
+    
+    <ui:define name="filters">
+    	<sh:defaultSearch bean="#{departmentBean}" />
+    </ui:define>
  </ui:decorate>
