--- a/WebContent/admin/manufacturers/index.xhtml
+++ b/WebContent/admin/manufacturers/index.xhtml
@@ -24,4 +24,8 @@
     		</h:column>
  		</sh:collectionTable>
     </ui:define>
+    
+    <ui:define name="filters">
+    	<sh:defaultSearch bean="#{manufacturerBean}" />
+    </ui:define>
  </ui:decorate>
