--- a/WebContent/admin/employees/index.xhtml
+++ b/WebContent/admin/employees/index.xhtml
@@ -29,4 +29,7 @@
     		</h:column>
  		</sh:collectionTable>
     </ui:define>
+    <ui:define name="filters">
+    	<sh:defaultSearch bean="#{employeeBean}" />
+    </ui:define>
  </ui:decorate>
