--- a/WebContent/admin/products/index.xhtml
+++ b/WebContent/admin/products/index.xhtml
@@ -28,4 +28,7 @@
     		</h:column>
  		</sh:collectionTable>
     </ui:define>
+    <ui:define name="filters">
+    	<sh:defaultSearch bean="#{productBean}" />
+    </ui:define>
  </ui:decorate>
