--- a/WebContent/login_error.xhtml
+++ b/WebContent/login_error.xhtml
@@ -3,8 +3,8 @@
 											xmlns:c="http://java.sun.com/jsf/core"
 											xmlns:h="http://java.sun.com/jsf/html">
 
-
     <ui:define name="content">
-    	<ui:include src="login_form.xhtml" />	
+    	<p class="error column_5 offset_2 margin-bottom">Usuário e/ou senha incorreto(s)!</p>
+    	<ui:include src="login_form.xhtml"></ui:include>	
     </ui:define>
 </ui:decorate>
