--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -70,7 +70,9 @@
 
 				<li class="next"><h:commandLink action="/home"
 						actionListener="#{shoppingBean.nextPage}"
-						styleClass="button alert" rendered="#{shoppingBean.nextPage}"></h:commandLink>
+						styleClass="button alert" rendered="#{shoppingBean.nextPage}">
+						Próxima <span class="icon chevron-right"></span>
+						</h:commandLink>
 				</li>
 			</ul>
 		</h:form>
