Issue #6, Fix employee crud

--- a/WebContent/admin/index.xhtml
+++ b/WebContent/admin/index.xhtml
@@ -2,4 +2,9 @@
 <ui:decorate template="/template/admin.xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
 											xmlns:c="http://java.sun.com/jsf/core"
 											xmlns:h="http://java.sun.com/jsf/html">
+	
+	<ui:define name="admin_page_title">Dashboard</ui:define>
+	<ui:define name="admin_content">
+		<p class="welcome">Bem-vindo humano!</p>
+	</ui:define>
 </ui:decorate>
