--- a/WebContent/resources/shoppingUcs/boolField.xhtml
+++ b/WebContent/resources/shoppingUcs/boolField.xhtml
@@ -7,6 +7,7 @@
 	<c:interface>
 		<c:attribute name="label" />
 		<c:attribute name="fieldId" />
+		<c:attribute name="value" />
 	</c:interface>
 	
 	<c:implementation>
