--- a/WebContent/resources/shoppingUcs/collectionTable.xhtml
+++ b/WebContent/resources/shoppingUcs/collectionTable.xhtml
@@ -14,6 +14,7 @@
 	    		<h:commandLink action="form"
 	    					   actionListener="#{cc.attrs.bean.build}"
 	    					   styleClass="icon add button tiny"
+	    					   rendered="#{cc.attrs.bean.hasCreate()}"
 	    					   value=" Novo" />
 	    	</p>
 	    	
